tests/compile-fail/compile_fail__meta_sprite_id_dupe_non_const.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: const evaluation error
   ┌─ <input>:36:62
   │
36 │         coolSprite: {x: 0.0, y: 0.0, w: 512.0, h: 480.0, id: 3 * I0},
   │                                                              ^^^^^^ non-const expression


